[tool.poetry]
name = "python-eduzz"
version = "1.0.0"
description = "Python client for Eduzz API v2."
authors = ["Henrique Bastos <henrique@bastos.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^21.4.0"
cattrs = "^1.10.0"
requests = "^2.27.1"
requests-futures = "^1.0.0"
URLObject = "^2.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
responses = "^0.19.0"
freezegun = "^1.2.0"
pylint = "^2.12.2"
black = "^22.1.0"
httpretty = "^1.1.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.idea
  | _build
  | buck-out
  | build
  | dist
)/
'''
